--- a/content/posts/redis-集群_20180903.md
+++ b/content/posts/redis-集群_20180903.md
@@ -129,7 +129,7 @@ vi tests/integration/replication-psync.tcl
 >cluster-enabled yes （启动集群模式）
 >cluster-config-file nodes.conf
 >cluster-node-timeout 15000
->appendonly yes
+>appendonly yes （根据需要是否开启AOF持久化）
 
 下面的几个配置可以了解下，可以不特殊配置：
 
@@ -229,3 +229,156 @@ ps -ef|grep redis
 系统出自动给出一个redis集群方案，如果同意输入y，回车，redis集群构建完成。
 
 ![最后](images\最后.png)
+
+## redis 3.0.7 的配置文件
+
+### 默认配置文件
+
+```sh
+################################ GENERAL  #####################################
+daemonize no
+pidfile /var/run/redis.pid
+port 1620
+tcp-backlog 511
+timeout 0
+tcp-keepalive 0
+loglevel notice
+logfile ""
+databases 16
+################################ SNAPSHOTTING  ################################
+stop-writes-on-bgsave-error yes
+rdbcompression yes
+rdbchecksum yes
+dbfilename dump.rdb
+dir ./
+################################# REPLICATION #################################
+slave-serve-stale-data yes
+slave-read-only yes
+repl-diskless-sync no
+repl-diskless-sync-delay 5
+repl-disable-tcp-nodelay no
+slave-priority 100
+################################### LIMITS ####################################
+maxmemory 10gb
+# AOF持久化是否开启
+appendonly no
+appendfilename "appendonly.aof"
+appendfsync everysec
+no-appendfsync-on-rewrite no
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+aof-load-truncated yes
+################################ LUA SCRIPTING  ###############################
+lua-time-limit 5000
+################################ REDIS CLUSTER  ###############################
+# cluster-enabled yes
+# cluster-config-file nodes-6379.conf
+#节点互连超时的阀值
+# cluster-node-timeout 15000
+# cluster-slave-validity-factor 10
+# cluster-migration-barrier 1
+# cluster-require-full-coverage yes
+################################## SLOW LOG ###################################
+slowlog-log-slower-than 10000
+slowlog-max-len 128
+################################ LATENCY MONITOR ##############################
+latency-monitor-threshold 0
+############################# EVENT NOTIFICATION ##############################
+notify-keyspace-events ""
+############################### ADVANCED CONFIG ###############################
+hash-max-ziplist-entries 512
+hash-max-ziplist-value 64
+list-max-ziplist-entries 512
+list-max-ziplist-value 64
+set-max-intset-entries 512
+zset-max-ziplist-entries 128
+zset-max-ziplist-value 64
+hll-sparse-max-bytes 3000
+activerehashing yes
+client-output-buffer-limit normal 0 0 0
+client-output-buffer-limit slave 256mb 64mb 60
+client-output-buffer-limit pubsub 32mb 8mb 60
+hz 10
+aof-rewrite-incremental-fsync yes
+```
+
+### cluster的配置文件
+
+打开配置：
+
+* cluster-enabled yes
+* cluster-config-file nodes-6379.conf
+* cluster-node-timeout 15000
+* cluster-migration-barrier 1
+
+```sh
+################################ GENERAL  #####################################
+# 是否开启开启守护进程模式，建议开启
+daemonize yes
+# ！！！！修改pidfile位置
+pidfile /home/redis/risk-redis-8551/redis.pid
+# ！！！！修改端口号
+port 8551
+tcp-backlog 511
+timeout 0
+tcp-keepalive 0
+loglevel notice
+logfile ""
+databases 16
+################################ SNAPSHOTTING  ################################
+stop-writes-on-bgsave-error yes
+rdbcompression yes
+rdbchecksum yes
+dbfilename dump.rdb
+dir ./
+################################# REPLICATION #################################
+slave-serve-stale-data yes
+slave-read-only yes
+repl-diskless-sync no
+repl-diskless-sync-delay 5
+repl-disable-tcp-nodelay no
+slave-priority 100
+################################### LIMITS ####################################
+maxmemory 10gb
+appendonly no
+appendfilename "appendonly.aof"
+appendfsync everysec
+no-appendfsync-on-rewrite no
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+aof-load-truncated yes
+################################ LUA SCRIPTING  ###############################
+lua-time-limit 5000
+################################ REDIS CLUSTER  ###############################
+cluster-enabled yes
+# ！！！！修改节点名称
+cluster-config-file nodes-8551.conf
+# #节点互连超时的阀值
+cluster-node-timeout 15000
+# cluster-slave-validity-factor 10
+cluster-migration-barrier 1
+# cluster-require-full-coverage yes
+################################## SLOW LOG ###################################
+slowlog-log-slower-than 10000
+slowlog-max-len 128
+################################ LATENCY MONITOR ##############################
+latency-monitor-threshold 0
+############################# EVENT NOTIFICATION ##############################
+notify-keyspace-events ""
+############################### ADVANCED CONFIG ###############################
+hash-max-ziplist-entries 512
+hash-max-ziplist-value 64
+list-max-ziplist-entries 512
+list-max-ziplist-value 64
+set-max-intset-entries 512
+zset-max-ziplist-entries 128
+zset-max-ziplist-value 64
+hll-sparse-max-bytes 3000
+activerehashing yes
+client-output-buffer-limit normal 0 0 0
+client-output-buffer-limit slave 256mb 64mb 60
+client-output-buffer-limit pubsub 32mb 8mb 60
+hz 10
+aof-rewrite-incremental-fsync yes
+```
+
